tools/sddl2/assembler/tests/fail/logic_xor_with_param.asm
# EXPECT-ERROR: Unknown instruction or unexpected token
push.i32 10
push.i32 20
logic.xor 5
halt
